SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
	- fixed USB device reconnection
	- reworked device box: display detected USB device in a list as well as full probing list.
	- tilp_device_probe_usb is now restricted to FLASH devices only (faster)

- 25/05/2006, version 0.13 (0.0.9, 0.1.3, 0.1.4, 0.0.3): roms/tyler
	- removed certificate support (deprecated)
	- raise the action box when sending files from command line in GUI mode
	- fixed violation in tree_selection_changed (raised when selecting files for deletion)
	- fixed progress bar update (tyler)
	- allowed MinGW Compiler to run TiLP on a Linux File Hierarchy system (tyler)

- 09/05/2006, version 0.12 (0.0.9, 0.1.2, 0.1.3, 0.0.3): roms
	- fixed bug in the use of USB auto-detect
	- rename 'Ready' button into 'Connect' when using DirectLink
	- update remote frame in the action box
	- update memory used when sending/deleting variables

- 06/05/2006, version 0.11 (0.0.9, 0.1.1, 0.1.3, 0.0.3): roms
	- added a new label which display RAM/FLASH free &used
	- show more levels in the current path
	- reworked/factorized opening/closing of device
	- auto-detect USB devices at startup
	- reworked full auto-detection

- 15/04/2006, version 0.10 (0.0.7, 0.1.0, 0.1.2, 0.0.3): roms
	- follows ticalcs2 changes in the API
	- added Titanium USB hand-held support
	- reworked displaying of Hand-Held Informations box

- 03/04/2006, version 0.09 (0.0.7, 0.0.8, 0.1.2, 0.0.3): roms
	- added TI84+ USB hand-held support
	- re-map 0x2080..9 chars into the ctree

- 03/02/2006, version 0.08 (0.0.7, 0.0.6, 0.1.0, 0.0.1): roms (testing phase: ~260 tests)
	- the right view did not filter file types correctly
	- user's suggestion: automatically change for detected cable/calc.
	- fixed displaying of greek chars in the action dbox.
	- can't load pdf/eps files
	- clamp gtk_update.cnt2 to avoid warnings